--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="menu-panel">
         <div class="score-panel">
             <div class="player player-1 active" id="player1">
-                <div class="player-name">Player 1</div>
+                <div class="player-name">You</div>
                 <div class="player-score" id="score1">0</div>
             </div>
             <div class="player player-2" id="player2">
-                <div class="player-name">Player 2</div>
+                <div class="player-name">TriCon AI</div>
                 <div class="player-score" id="score2">0</div>
             </div>
         </div>
@@ -31,8 +31,8 @@
 
         <label>Change first to play:</label>
         <div id="firstToPlay">
-            <label for="firstPlayer1"><input type="radio" id="firstPlayer1" name="firstPlayer" value="1" checked> Player 1</label>
-            <label for="firstPlayer2"><input type="radio" id="firstPlayer2" name="firstPlayer" value="2"> Player 2</label>
+            <label for="firstPlayer1"><input type="radio" id="firstPlayer1" name="firstPlayer" value="1" checked> You</label>
+            <label for="firstPlayer2"><input type="radio" id="firstPlayer2" name="firstPlayer" value="2"> TriCon AI</label>
         </div>
     </div>
         
