--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
             </div>
         </div>
 
-        <div id="ai-status" style="text-align: center; margin: 10px 0; color: #333;">Your turn</div>
+        <span id="ai-status" style="text-align: center; margin: 10px 0; color: #333;">Your turn</span>
 
         <button id="restart-btn">Restart Game</button>
-        <button id="new-game-btn" style="display: none;">New Game</button>
 
         <label for="boardSize">Change board size:</label>
         <input type="range" id="boardSize" name="boardSize" min="4" max="8" step="1" value="6">
