feat: add styling for settings

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         
         <div class="score-panel">
             <span id="ai-status">Your turn</span>
-            <h2>Score:</h2>
             <div class="player player-1 active" id="player1">
                 <div class="player-name">You</div>
                 <div class="player-score" id="score1">0</div>
@@ -26,12 +25,12 @@
 
         <div class="settings-panel">
             <button id="restart-btn">Restart Game</button>
-            <div class="column-align">
+            <div class="setting">
                 <label for="boardSize">Change board size:</label>
                 <input type="range" id="boardSize" name="boardSize" min="4" max="8" step="1" value="6">
                 <span id="boardSizeValue"> 6 </span>
             </div>
-            <div class="column-align">
+            <div class="setting">
                 <label>Change first to play:</label>
                 <div id="firstToPlay">
                     <label for="firstPlayer1"><input type="radio" id="firstPlayer1" name="firstPlayer" value="1" checked> You</label>
